--- a/dopplehangar-frontend/src/Components/Home/home.css
+++ b/dopplehangar-frontend/src/Components/Home/home.css
@@ -1,31 +1,40 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.image-container {
+.parent {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: linear-gradient(45deg, #4b79a1, #283e51);
 }
 
-.image-form {
-  background: rgba(0, 0, 0, 0.8);
-  padding: 2rem;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  color: white;
+.intro {
   width: 100%;
-  max-width: 400px;
-  text-align: center;
+  height: 610px;
+  background: #63BB9D 0% 0% no-repeat padding-box;
+  opacity: 1;
+  display: block;
 }
 
-.input-group {
-    margin-bottom: 1rem;
-    text-align: left;
-  }
-
-.image-container h1 {
-    text-align: center;
-    position: flex;
-    
+.explaination {
+  width: 100%;
+  height: 610px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  opacity: 1;
+  display: block;
 }
 
+.intro, .explaination {
+  flex-shrink: 0;
+  flex-grow: 1;
+}
+
+.intro {
+  border: 2px solid green;
+}
+
+.explaination {
+  border: 2px solid blue;
+}
