--- a/dopplehangar-frontend/src/Components/Navbar/navbar.css
+++ b/dopplehangar-frontend/src/Components/Navbar/navbar.css
@@ -2,15 +2,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
-    color: #fff;
+    background-color: white;
+    color: #000; /* Set text color to black */
     padding: 1rem;
+    height: 120px;
   }
   
   .navbar-left .logo {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #fff;
+    color: #000; /* Set logo color to black */
     text-decoration: none;
   }
   
@@ -26,7 +27,7 @@
   }
   
   .navbar-center .nav-links a {
-    color: #fff;
+    color: #000; /* Set nav link color to black */
     text-decoration: none;
   }
   
@@ -37,7 +38,7 @@
   
   .navbar-right .cart-icon,
   .navbar-right .user-icon {
-    color: #fff;
+    color: #000; /* Set icon color to black */
     text-decoration: none;
     margin-left: 1rem;
     position: relative;
@@ -53,3 +54,4 @@
     top: -0.5rem;
     right: -0.5rem;
   }
+  
