--- a/dopplehangar-frontend/src/Components/Home/home.css
+++ b/dopplehangar-frontend/src/Components/Home/home.css
@@ -1,40 +1,62 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.parent {
+/* Home Container - Scoped Styles */
+.home-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.intro {
+  align-items: center;
   width: 100%;
-  height: 610px;
-  background: #63BB9D 0% 0% no-repeat padding-box;
-  opacity: 1;
-  display: block;
 }
 
-.explaination {
+/* Intro Section */
+.home-container .intro-section {
   width: 100%;
-  height: 610px;
-  background: #FFFFFF 0% 0% no-repeat padding-box;
-  opacity: 1;
-  display: block;
+  background-color: #63bb9d;
+  padding: 100px 0;
 }
 
-.intro, .explaination {
-  flex-shrink: 0;
-  flex-grow: 1;
+.home-container .intro-section__title {
+  text-align: center;
+  font-size: 91px;
+  line-height: 120px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-top: 0;
 }
 
-.intro {
-  border: 2px solid green;
+/* Explanation Section */
+.home-container .explanation-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 0;
+  width: 100%;
+  background-color: #ffffff;
+  min-height: 610px;
 }
 
-.explaination {
-  border: 2px solid blue;
+.home-container .box-container {
+  display: flex;
+  gap: 50px;
+}
+
+.home-container .box {
+  width: 252px;
+  height: 252px;
+  background-color: #b8e0d8;
+}
+
+/* Upload Section */
+.home-container .upload-section {
+  margin-top: 50px;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+  background-color: #dcefee;
+}
+
+.home-container .upload-section__text {
+  font-size: 57px;
+  font-weight: bold;
+  color: #63bb9d;
+  text-align: left;
 }
