--- a/dopplehangar-frontend/src/Components/Recommendations/recommendations.css
+++ b/dopplehangar-frontend/src/Components/Recommendations/recommendations.css
@@ -88,13 +88,16 @@
   opacity: 1;
 }
 
-.recommendation-display {
-  top: 247px;
-  width: 210px;
-  height: 80px;
-  text-align: center;
-  font: normal normal bold 31px/40px Roboto;
-  letter-spacing: 0px;
-  color: #ffffff;
-  opacity: 1;
+.recommendation-display-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 12%;
+    width: 210px;
+    height: 80px;
+    text-align: center;
+    font: normal normal bold 31px/40px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    opacity: 1;
 }
