--- a/dopplehangar-frontend/src/Components/Upload/upload.css
+++ b/dopplehangar-frontend/src/Components/Upload/upload.css
@@ -59,3 +59,11 @@
 .upload-btn:hover {
   background-color: #555;
 }
+
+.loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
