--- a/dopplehangar-frontend/src/Components/Upload/upload.css
+++ b/dopplehangar-frontend/src/Components/Upload/upload.css
@@ -67,3 +67,22 @@
   justify-content: center;
   margin-top: 20px;
 }
+
+.loading-overlay {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  z-index: 999;
+  text-align: center;
+}
+
+.loading-spinner {
+  width: 400px;
+  height: auto;
+}
